--- a/Lab02_Alien/src/main/resources/fxml/Scene.fxml
+++ b/Lab02_Alien/src/main/resources/fxml/Scene.fxml
@@ -1,22 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="343.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.alien.FXMLController">
+<BorderPane prefHeight="305.0" prefWidth="486.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.alien.FXMLController">
    <top>
       <Label text="Lab 2 - Alien Translator" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="10.0" />
          </BorderPane.margin>
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Label>
    </top>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <center>
+      <HBox prefHeight="77.0" prefWidth="466.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Alien text">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" right="15.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="txtAnswer" prefHeight="25.0" prefWidth="207.0">
+               <HBox.margin>
+                  <Insets right="25.0" />
+               </HBox.margin>
+            </TextField>
+            <Button fx:id="btTranslate" mnemonicParsing="false" onAction="#doTranslate" text="Translate">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+            </Button>
+            <ImageView fitHeight="50.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Alien-512.png" />
+               </image>
+               <HBox.margin>
+                  <Insets bottom="2.0" right="5.0" />
+               </HBox.margin>
+            </ImageView>
+         </children>
+      </HBox>
+   </center>
+   <bottom>
+      <VBox prefHeight="188.0" prefWidth="466.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextArea fx:id="txtResult" prefHeight="155.0" prefWidth="466.0" promptText="Welcome to Alien Dictionary v2021" />
+            <Button fx:id="btClearText" contentDisplay="CENTER" mnemonicParsing="false" onAction="#doReset" text="Clear Text">
+               <VBox.margin>
+                  <Insets left="370.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+   </bottom>
 </BorderPane>
